# typit

./: .gitignore  Cargo.toml  LICENSE  README.md  deps.nix  flake.nix  mix.exs  shell.nix
config/: config.exs  runtime.exs
lib/: command.ex  constants.ex  event_handler.ex  typit.ex
src/: commands.rs  handler.rs  main.rs
